mobilegame setup server

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <script src="js/apksetup.js" type="text/javascript"></script>
 </head>
 <body>
-    <input type="button" value="幻想三国安卓打包下载" onclick="resetApk()" />
-    <input type="button" value="幻想三国windows打包下载" onclick="resetWin()" />
-    <input type="button" value="幻想三国安卓版本下载" onclick="getApk()" />
-    <input type="button" value="幻想三国windows版本下载" onclick="getWin()" />
+    <input  type="button" value="幻想三国安卓打包下载" onclick="resetApk()" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;"/>
+    <input type="button" value="幻想三国windows打包下载" onclick="resetWin()" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;" />
+    <input type="button" value="幻想三国安卓版本下载" onclick="getApk()" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;"/>
+    <input type="button" value="幻想三国windows版本下载" onclick="getWin()" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;"/>
      <!--form action="/download_apk">
 	    <input type="submit" value="下载apk文件" />
      </!--form>
