--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
+	<style type="text/css">
+		#err{color:red;}
+	</style>
     <script src="js/jquery-2.0.3.js"></script>
     <script src="js/apksetup.js" type="text/javascript"></script>
 </head>
@@ -16,5 +19,6 @@
 	    <input type="submit" value="下载apk文件" />
      </form-->
     <div id="log"><ul></ul></div>
+    <div id="err"><ul></ul></div>
 </body>
 </html>
