--- a/video/index.html
+++ b/video/index.html
@@ -5,7 +5,8 @@ video
 </title>
 </head>
 <body>
-<video src="http://127.0.0.1:12345/video/data/movie.m3u8" controls="controls">
+<!--video src="http://127.0.0.1:12345/video/data/movie.m3u8" controls="controls" loop="true" autoplay="true"height="150" width="300"-->
+<video src="http://127.0.0.1:12345/video/data/movie.m3u8" controls="controls" loop="true" autoplay="true">
 您的浏览器不支持 video 标签。
 </video>
 </body>
